update image alt

--- a/animal-trading-cards-master/card.html
+++ b/animal-trading-cards-master/card.html
@@ -10,7 +10,7 @@
 		<!-- your favorite animal's name goes here -->
 		<h3>CHEETAH</h3>
 		<!-- your favorite animal's image goes here -->
-		<img src="cheetah.png" class="picture" alt="name-of-your-animal">
+		<img src="cheetah.png" class="picture" alt="cheetah">
 		<div class="container">
 			<!-- your favorite animal's interesting fact goes here -->
 			<p id="fact">Cheetahs are worlds fastest land mammal...</p>
